--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #eeecec;
 }
 
-.countdown-timer .item {
+.countdown .item {
     position: relative;
     display: inline-block;
     text-align: center;
@@ -11,11 +11,11 @@ body {
     display: block;
 }
 
-.countdown-timer .item:last-child {
+.countdown .item:last-child {
     margin-bottom: 0 !important;
 }
 
-.countdown-timer .item span {
+.countdown .item span {
     color: #000;
     font-weight: 700;
     font-size: 48px;
@@ -23,7 +23,7 @@ body {
     margin-bottom: 6px;
 }
 
-.countdown-timer .item small {
+.countdown .item small {
     font-size: 50px;
     font-weight: 600;
     position: absolute;
@@ -33,7 +33,7 @@ body {
     color: #58a806;
 }
 
-.countdown-timer .item p {
+.countdown .item p {
     color: #58a806;
     font-size: 13px;
     font-weight: 600;
