--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@ img {
 
 body {
     padding: 20px;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,7 +26,7 @@ body {
     font-family: "League Spartan", serif;
     font-weight: 400;
     font-size: 20px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .coming-soon {
@@ -34,7 +34,7 @@ body {
 }
 
 .logo {
-    width: 150px;
+    width: 130px;
     margin-bottom: 25px;
 }
 
@@ -73,4 +73,66 @@ body {
     font-size: 18px;
     text-transform: uppercase;
     color: #FF8585;
+}
+
+@media only screen and (min-width: 768px) {
+    body {
+        font-size: 22px;
+    }
+
+    .logo {
+        width: 150px;
+        margin-bottom: 30px;
+    }
+    
+    .title {
+        font-size: 40px;
+        margin-bottom: 25px;
+    }
+
+    .description {
+        margin-bottom: 30px;
+    }
+
+    .countdown {
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .item {
+        padding: 15px 30px;
+        position: relative;
+    }
+
+    .item:first-child {
+        padding-left: 0;
+    }
+
+    .item:last-child {
+        padding-right: 0;
+    }
+
+    .item::before {
+        content: ":";
+        position: absolute;
+        color: #FF8585;
+        top: 35%;
+        right: -5px;
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 0;
+    }
+
+    .item:last-child {
+        padding-right: 0;
+    }
+
+    .item:last-child::before {
+        content: none;
+    }
+
+    .item strong {
+        font-size: 35px;
+        margin-bottom: 10px;
+    }
 }
