--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,17 @@
+:root {
+    --font-primary : "Cinzel Decorative", serif;
+    --font-secondary : "League Spartan", serif;
+    --main-background-color : #000;
+    --color-primary : #FFF;
+    --color-secondary : #FF8585;
+}
+
 *,
 *::before,
 *::after {
     box-sizing: border-box;
 }
 
-body,
 h1,
 p {
     margin: 0;
@@ -16,17 +23,19 @@ img {
 }
 
 body {
+    max-width: 1440px;
+    margin: 0 auto;
     padding: 20px;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #000;
-    color: #FFF;
-    font-family: "League Spartan", serif;
+    background-color: var(--main-background-color);
+    color: var(--color-primary);
+    font-family: var(--font-secondary);
     font-weight: 400;
     font-size: 20px;
-    line-height: 1.2;
+    line-height: 1.25;
 }
 
 .coming-soon {
@@ -63,7 +72,7 @@ body {
 
 .item strong {
     display: block;
-    font-family: "Cinzel Decorative", serif;
+    font-family: var(--font-primary);
     font-size: 30px;
     font-weight: 700;
     margin-bottom: 5px;
@@ -72,7 +81,7 @@ body {
 .item p {
     font-size: 18px;
     text-transform: uppercase;
-    color: #FF8585;
+    color: var(--color-secondary);
 }
 
 @media only screen and (min-width: 768px) {
@@ -115,7 +124,7 @@ body {
     .item::before {
         content: ":";
         position: absolute;
-        color: #FF8585;
+        color: var(--color-secondary);
         top: 35%;
         right: -5px;
         font-size: 40px;
